Fixed color contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -27,7 +27,6 @@ header img {
 }
 
 .navigation a:hover {
-	color: var(--secondary-color);
 	text-decoration: underline;
 }
 
@@ -37,7 +36,7 @@ header img {
     margin: 0;
     width: 13rem;
     text-align: center;
-    background-color: var(--accent2-color);
+    background-color: var(--secondary-color);
     color: var(--primary-color);
 }
 
@@ -77,7 +76,7 @@ a {
 .hero h1 {
     position: absolute;
     color: var(--primary-color);
-    background-color: #B38A58CC;
+    background-color: #19381FCC;
     top: 50%;
     width: 97.5%;
     text-align: center;
@@ -163,6 +162,7 @@ h2 {
 }
 
 .footer img {
+    display: flex;
     width: 40px;
     height: auto;
     padding: 0.25rem;
